perubahan kecil, tidak berpengaruh

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- ====== Navbar Section End -->
 
     <!-- ====== Hero Section Start -->
-    <div id="home" class="relative pt-[80px] md:pt-[90px] lg:pt-[120px] bg-primary">
+    <div class="relative pt-[80px] md:pt-[90px] lg:pt-[120px] bg-primary">
         <div>
             <div class="flex flex-wrap items-center -mx-4">
                 <div class="w-full px-4">
