--- a/index.html
+++ b/index.html
@@ -841,15 +841,14 @@
                             What our Client Say
                         </h2>
                         <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
-                            There are many variations of passages of Lorem Ipsum available
-                            but the majority have suffered alteration in some form.
+                            Testimoni Pelanggan yang Sudah Menggunakan SIMRS Reksamedic 
                         </p>
                     </div>
                 </div>
             </div>
 
             <div class="flex flex-wrap">
-                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+                <!-- <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".1s
               ">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
@@ -890,13 +889,14 @@
                                 <img src="assets/images/testimonials/author-01.png" alt="author" />
                             </div>
                             <div class="ud-testimonial-meta">
-                                <h4 class="text-sm font-semibold">Sabo Masties</h4>
-                                <p class="text-[#969696] text-xs">Founder @ Rolex</p>
+                                <h4 class="text-sm font-semibold">Maulana Yusril Mahendra</h4>
+                                <p class="text-[#969696] text-xs">IT RSUD Ciawi Kabupaten Bogor
+                                </p>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+                </div> -->
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3 mx-auto">
                     <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".15s
               ">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
@@ -928,8 +928,7 @@
                         </div>
                         <div class="mb-6 ud-testimonial-content">
                             <p class="text-base tracking-wide text-body-color">
-                                “Our members are so impressed. It's intuitive. It's clean.
-                                It's distraction free. If you're building a community.
+                                “Keunggulan utama SIMRS Reksamedic adalah kemudahan penggunaan dan support teknis yang sangat responsif. Kami tidak perlu khawatir ketika ada kendala, karena tim mereka siap membantu kapanpun.”
                             </p>
                         </div>
                         <div class="flex items-center ud-testimonial-info">
@@ -937,13 +936,13 @@
                                 <img src="assets/images/testimonials/author-02.png" alt="author" />
                             </div>
                             <div class="ud-testimonial-meta">
-                                <h4 class="text-sm font-semibold">Margin Gesmu</h4>
-                                <p class="text-[#969696] text-xs">Founder @ UI Hunter</p>
+                                <h4 class="text-sm font-semibold">Maulana Yusril Mahendra</h4>
+                                <p class="text-[#969696] text-xs">IT RSUD Ciawi Kabupaten Bogor</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+                <!-- <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".2s
               ">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
@@ -990,7 +989,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="flex flex-wrap">
                 <div class="w-full mx-4">
                     <div class="wow fadeInUp" data-wow-delay=".2s">
