nambah pertanyaan baris 660

--- a/index.html
+++ b/index.html
@@ -652,17 +652,17 @@
         <div class="container">
             <div class="flex flex-wrap -mx-4">
                 <div class="w-full px-4">
-                    <div class="text-center mx-auto mb-[60px] lg:mb-20 max-w-[620px]">
+                    <div class="text-center mx-auto mb-[60px] lg:mb-20 max-w-[800px]">
                         <span class="block mb-2 text-lg font-semibold text-primary">
                             FAQ
                         </span>
                         <h2 class="font-bold text-3xl sm:text-4xl md:text-[42px] text-dark mb-4">
-                            Any Questions? Answered
+                            Pertanyaan yang Sering Diajukan
                         </h2>
-                        <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
+                        <!-- <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
                             There are many variations of passages of Lorem Ipsum available
                             but the majority have suffered alteration in some form.
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
@@ -679,7 +679,7 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    How to use TailGrids?
+                                    1. Apakah SIMRS Reksamedic bisa disesuaikan dengan kebutuhan rumah sakit saya?
                                 </h4>
                             </div>
                         </button>
@@ -702,7 +702,7 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    How to download icons from LineIcons?
+                                    2. Apakah SIMRS Reksamedic kompatibel dengan sistem BPJS?
                                 </h4>
                             </div>
                         </button>
@@ -725,7 +725,7 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    Is GrayGrids part of UIdeck?
+                                    3. Berapa lama waktu yang dibutuhkan untuk implementasi sistem?
                                 </h4>
                             </div>
                         </button>
@@ -750,7 +750,7 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    Can I use this template for commercial project?
+                                    4. Apakah ada pelatihan untuk staf setelah implementasi?
                                 </h4>
                             </div>
                         </button>
@@ -773,7 +773,7 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    Do you have plan to releasing Play Pro?
+                                    5. Bagaimana dengan keamanan data pasien?
                                 </h4>
                             </div>
                         </button>
@@ -796,7 +796,8 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    Where and how to host this template?
+                                    6. Bagaimana cara menghubungi layanan pelanggan jika ada masalah?
+
                                 </h4>
                             </div>
                         </button>
