--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <!-- ====== Hero Section Start -->
     <div class="relative pt-[80px] md:pt-[90px] lg:pt-[120px] bg-primary">
-        <div>
+        <div class="container">
             <div class="flex flex-wrap items-center -mx-4">
                 <div class="w-full px-4">
                     <div class="mx-auto text-center hero-content max-w-7xl wow fadeInUp" data-wow-delay=".2s">
@@ -842,7 +842,7 @@
                             What our Client Say
                         </h2>
                         <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
-                            Testimoni Pelanggan yang Sudah Menggunakan SIMRS Reksamedic 
+                            Testimoni Pelanggan yang Sudah Menggunakan SIMRS Reksamedic
                         </p>
                     </div>
                 </div>
@@ -897,7 +897,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/3 mx-auto">
+                <div class="w-full px-4 mx-auto md:w-1/2 lg:w-1/3">
                     <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".15s
               ">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
@@ -991,47 +991,47 @@
                     </div>
                 </div>
             </div> -->
-            <div class="flex flex-wrap">
-                <div class="w-full mx-4">
-                    <div class="wow fadeInUp" data-wow-delay=".2s">
-                        <div class="mb-8 ud-title">
-                            <h6 class="relative inline-flex items-center text-xs font-normal text-body-color">
-                                Some Of Our Clients
-                                <span class="w-8 h-[1px] inline-block bg-[#afb2b5] ml-4">
-                                </span>
-                            </h6>
-                        </div>
-                        <div class="flex flex-wrap items-center ud-brands-logo">
-                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                <a href="https://tailgrids.com" target="_blank" rel="nofollow noopner">
-                                    <img src="assets/images/brands/tailgrids.svg" alt="tailgrids" class="duration-300 grayscale hover:filter-none" />
-                                </a>
+                <div class="flex flex-wrap">
+                    <div class="w-full mx-4">
+                        <div class="wow fadeInUp" data-wow-delay=".2s">
+                            <div class="mb-8 ud-title">
+                                <h6 class="relative inline-flex items-center text-xs font-normal text-body-color">
+                                    Some Of Our Clients
+                                    <span class="w-8 h-[1px] inline-block bg-[#afb2b5] ml-4">
+                                    </span>
+                                </h6>
                             </div>
-                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                <a href="https://ayroui.com" target="_blank" rel="nofollow noopner">
-                                    <img src="assets/images/brands/ayroui.svg" alt="ayroui" class="duration-300 grayscale hover:filter-none" />
-                                </a>
-                            </div>
-                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                <a href="https://uideck.com" target="_blank" rel="nofollow noopner">
-                                    <img src="assets/images/brands/uideck.svg" alt="uideck" class="duration-300 grayscale hover:filter-none" />
-                                </a>
-                            </div>
-                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                <a href="https://graygrids.com" target="_blank" rel="nofollow noopner">
-                                    <img src="assets/images/brands/graygrids.svg" alt="graygrids" class="duration-300 grayscale hover:filter-none" />
-                                </a>
-                            </div>
-                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                <a href="https://lineicons.com" target="_blank" rel="nofollow noopner">
-                                    <img src="assets/images/brands/lineicons.svg" alt="lineicons" class="duration-300 grayscale hover:filter-none" />
-                                </a>
+                            <div class="flex flex-wrap items-center ud-brands-logo">
+                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                    <a href="https://tailgrids.com" target="_blank" rel="nofollow noopner">
+                                        <img src="assets/images/brands/tailgrids.svg" alt="tailgrids" class="duration-300 grayscale hover:filter-none" />
+                                    </a>
+                                </div>
+                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                    <a href="https://ayroui.com" target="_blank" rel="nofollow noopner">
+                                        <img src="assets/images/brands/ayroui.svg" alt="ayroui" class="duration-300 grayscale hover:filter-none" />
+                                    </a>
+                                </div>
+                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                    <a href="https://uideck.com" target="_blank" rel="nofollow noopner">
+                                        <img src="assets/images/brands/uideck.svg" alt="uideck" class="duration-300 grayscale hover:filter-none" />
+                                    </a>
+                                </div>
+                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                    <a href="https://graygrids.com" target="_blank" rel="nofollow noopner">
+                                        <img src="assets/images/brands/graygrids.svg" alt="graygrids" class="duration-300 grayscale hover:filter-none" />
+                                    </a>
+                                </div>
+                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                    <a href="https://lineicons.com" target="_blank" rel="nofollow noopner">
+                                        <img src="assets/images/brands/lineicons.svg" alt="lineicons" class="duration-300 grayscale hover:filter-none" />
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- ====== Testimonials End ====== -->
 
