memodifikasi hero section

--- a/index.html
+++ b/index.html
@@ -110,29 +110,29 @@
     <!-- ====== Navbar Section End -->
 
     <!-- ====== Hero Section Start -->
-    <div class="relative pt-[80px] md:pt-[90px] lg:pt-[120px] bg-primary">
-        <div class="container">
-            <div class="flex flex-wrap items-center -mx-4">
+    <div class="relative pt-[100px] md:pt-[90px] lg:pt-[100px] bg-primary h-screen">
+        <div class="container h-full">
+            <div class="flex flex-wrap items-center h-full -mx-4">
                 <div class="w-full px-4">
-                    <div class="mx-auto text-center hero-content max-w-7xl wow fadeInUp" data-wow-delay=".2s">
-                        <h1 class="text-white font-bold text-3xl sm:text-4xl md:text-[45px] leading-snug sm:leading-snug md:leading-snug mb-3">
+                    <div class="self-center mx-auto text-center hero-content max-w-7xl wow fadeInUp" data-wow-delay=".2s">
+                        <h1 class="text-white font-extrabold text-3xl sm:text-4xl md:text-[45px] leading-snug sm:leading-snug md:leading-snug">
                             <!-- Open-Source Web Template for SaaS, Startup, Apps, and More -->
                             SIMRS Reksamedic : Solusi Digital Terbaik untuk Manajemen Rumah
                             Sakit Anda
                         </h1>
-                        <p class="text-[#f8f8f8] font-medium text-2xl mb-5 sm:text-3xl md:text-[35px] leading-tight sm:leading-tight md:leading-tight">
+                        <p class="text-[#f8f8f8] mt-2 font-semibold text-2xl mb-5 sm:text-3xl md:text-[30px] leading-tight sm:leading-tight md:leading-tight">
                             Kenapa Pilih SIMRS Reksamedic?
                         </p>
-                        <div class="max-w-md mx-auto">
+                        <!-- <div class="max-w-md mx-auto">
                             <p class="transition-all duration-300 text-base sm:text-lg sm:leading-relaxed md:text-xl md:leading-relaxed mx-auto mb-5 text-[#e4e4e4] max-w-[940px]">
                                 Manajemen rumah sakit yang efisien dan terintegrasi adalah kunci untuk memberikan pelayanan kesehatan terbaik kepada pasien.
                                 <span id="more-text" class="hidden text-base sm:text-lg sm:leading-relaxed md:text-xl md:leading-relaxed mx-auto mb-5 text-[#e4e4e4] max-w-[940px]"><strong class="text-[#f3f3f3]">SIMRS Reksamedic</strong>
                                     hadir sebagai solusi Sistem Informasi Manajemen Rumah Sakit (SIMRS) yang modern, lengkap, dan mudah digunakan, dirancang khusus untuk membantu rumah sakit meningkatkan pelayanan, memaksimalkan efisiensi, dan mengelola operasional dengan lebih baik.
                                 </span>
                             </p>
-                            <button id="toggle-btn" class="mt-4 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none">Read More</button>
-                            <button id="hide-btn" class="hidden mt-4 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none">Hide</button>
-                        </div>
+                        </div> -->
+                        <button class="mt-2 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none"><a href="#about">Learn More</a></button>
+                        <!-- <button id="hide-btn" class="hidden mt-4 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none">Hide</button> -->
                     </div>
                 </div>
                 <!-- <ul class="flex flex-wrap items-center justify-center mb-10">
@@ -165,7 +165,7 @@
                   " />
             </div> -->
 
-                <div class="w-full px-4">
+                <div class="self-end w-full px-4">
                     <div class="mx-auto max-w-[845px] relative z-10 wow fadeInUp" data-wow-delay=".25s">
                         <!-- <div class="mt-16">
               <img src="assets/images/hero/hero-image.jpg" alt="hero" class="max-w-full mx-auto rounded-t-xl rounded-tr-xl" />
