--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
                             tersimpan secara akurat dan mudah diakses oleh staf medis dengan
                             keamanan data yang terjamin.
                         </p>
-                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
-              Learn More
-            </a> -->
+                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                            Learn More
+                        </a>
                     </div>
                 </div>
 
@@ -400,10 +400,10 @@
                             </svg>
                         </div>
                         <h4 class="mb-3 text-xl font-bold text-dark">
-                            Multipurpose Template
+                            Manajemen Keuangan yang Transparan
                         </h4>
                         <p class="mb-8 text-body-color lg:mb-11">
-                            Lorem Ipsum is simply dummy text of the printing and industry.
+                            Mengelola billing dan pembayaran rumah sakit secara otomatis dengan sistem yang terintegrasi. Dari asuransi hingga pembayaran langsung pasien, sistem ini membantu memastikan setiap transaksi berjalan lancar.
                         </p>
                         <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
@@ -424,10 +424,10 @@
                             </svg>
                         </div>
                         <h4 class="mb-3 text-xl font-bold text-dark">
-                            High-quality Design
+                            Dashboard Laporan yang Lengkap
                         </h4>
                         <p class="mb-8 text-body-color lg:mb-11">
-                            Lorem Ipsum is simply dummy text of the printing and industry.
+                            Dapatkan laporan mendetail tentang kinerja rumah sakit kapan saja. Dengan fitur dashboard yang interaktif, Anda dapat memantau statistik pasien, keuangan,dan operasional secara real-time untuk pengambilan keputusan yang lebih baik.
                         </p>
                         <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
@@ -445,10 +445,52 @@
                             </svg>
                         </div>
                         <h4 class="mb-3 text-xl font-bold text-dark">
-                            All Essential Elements
+                            Pengelolaan Obat dan Inventarisasi
                         </h4>
                         <p class="mb-8 text-body-color lg:mb-11">
-                            Lorem Ipsum is simply dummy text of the printing and industry.
+                            Kontrol penuh terhadap stok obat dan alat medis. SIMRS Reksamedic membantu Anda memastikan bahwa kebutuhan medis di rumah sakit selalu terjaga dengan baik, menghindari kekurangan stok yang dapat menghambat layanan kepada pasien.
+                        </p>
+                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Fitur 5 -->
+                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                    <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
+                        <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
+                            <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
+                            <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M29.5312 21.6562L28.6563 21.1641L29.6953 20.5625C30.7344 19.9062 31.3359 18.8125 31.2812 17.6094C31.2266 16.4063 30.625 15.3125 29.5312 14.7109L27.8906 13.7813L29.6406 12.6875C30.6797 12.0313 31.2812 10.9375 31.2266 9.73438C31.1719 8.53125 30.5703 7.4375 29.4766 6.83594L19.25 1.09375C18.2109 0.492187 16.9531 0.546875 15.9141 1.09375L5.41406 7.21875C4.375 7.82031 3.71875 8.91406 3.71875 10.1172C3.71875 11.3203 4.375 12.4141 5.41406 13.0156L7.10938 14L5.41406 14.9844C4.375 15.5859 3.71875 16.6797 3.71875 17.8828C3.71875 19.0859 4.32031 20.1797 5.41406 20.7812L6.39844 21.3281L5.46875 21.875C4.42969 22.4766 3.77344 23.5703 3.77344 24.7734C3.77344 25.9766 4.375 27.0703 5.46875 27.6719L15.9141 33.6875C16.4609 34.0156 17.0078 34.125 17.6094 34.125C18.2109 34.125 18.8125 33.9609 19.3594 33.6328L29.6953 27.2891C30.7344 26.6328 31.3359 25.5391 31.2812 24.3359C31.2266 23.2969 30.625 22.2031 29.5312 21.6562ZM5.63281 10.1172C5.63281 9.57031 5.90625 9.13281 6.34375 8.85938L16.8438 2.78906C17.0625 2.67969 17.3359 2.57031 17.5547 2.57031C17.7734 2.57031 18.0469 2.625 18.2656 2.73437L28.5469 8.47656C28.9844 8.75 29.2578 9.1875 29.3125 9.73438C29.3125 10.2812 29.0391 10.7188 28.6016 10.9922L18.3203 17.3906C17.8828 17.6641 17.2812 17.6641 16.8438 17.3906L6.39844 11.375C5.90625 11.1562 5.63281 10.6641 5.63281 10.1172ZM5.63281 17.9375C5.63281 17.3906 5.90625 16.9531 6.34375 16.6797L9.02344 15.1484L15.8594 19.0859C16.4062 19.4141 16.9531 19.5234 17.5547 19.5234C18.1562 19.5234 18.7578 19.3594 19.3047 19.0312L26.0312 14.875L28.6016 16.2969C29.0391 16.5703 29.3125 17.0078 29.3672 17.5547C29.3672 18.1016 29.0938 18.5391 28.6563 18.8125L18.3203 25.2656C17.8828 25.5391 17.2812 25.5391 16.8438 25.2656L6.39844 19.25C5.90625 18.9766 5.63281 18.4844 5.63281 17.9375ZM28.6563 25.8125L18.3203 32.2109C17.8828 32.4844 17.2812 32.4844 16.8438 32.2109L6.39844 26.1953C5.96094 25.9219 5.6875 25.4844 5.6875 24.9375C5.6875 24.3906 5.96094 23.9531 6.39844 23.6797L8.3125 22.5859L15.8594 26.9609C16.4062 27.2891 16.9531 27.3984 17.5547 27.3984C18.1562 27.3984 18.7578 27.2344 19.3047 26.9062L26.7969 22.2578L28.6563 23.2969C29.0938 23.5703 29.3672 24.0078 29.4219 24.5547C29.3672 25.0469 29.0938 25.5391 28.6563 25.8125Z" fill="white" />
+                            </svg>
+                        </div>
+                        <h4 class="mb-3 text-xl font-bold text-dark">
+                            Modul Rawat Inap & Rawat Jalan
+                        </h4>
+                        <p class="mb-8 text-body-color lg:mb-11">
+                            Kelola proses rawat inap dan rawat jalan secara efisien dengan modul yang didesain khusus untuk mempermudah alur kerja tenaga medis. Sistem ini memastikan pasien mendapatkan pelayanan yang cepat dan tepat tanpa kendala.
+                        </p>
+                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Fitur 6 -->
+                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                    <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
+                        <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
+                            <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
+                            <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M29.5312 21.6562L28.6563 21.1641L29.6953 20.5625C30.7344 19.9062 31.3359 18.8125 31.2812 17.6094C31.2266 16.4063 30.625 15.3125 29.5312 14.7109L27.8906 13.7813L29.6406 12.6875C30.6797 12.0313 31.2812 10.9375 31.2266 9.73438C31.1719 8.53125 30.5703 7.4375 29.4766 6.83594L19.25 1.09375C18.2109 0.492187 16.9531 0.546875 15.9141 1.09375L5.41406 7.21875C4.375 7.82031 3.71875 8.91406 3.71875 10.1172C3.71875 11.3203 4.375 12.4141 5.41406 13.0156L7.10938 14L5.41406 14.9844C4.375 15.5859 3.71875 16.6797 3.71875 17.8828C3.71875 19.0859 4.32031 20.1797 5.41406 20.7812L6.39844 21.3281L5.46875 21.875C4.42969 22.4766 3.77344 23.5703 3.77344 24.7734C3.77344 25.9766 4.375 27.0703 5.46875 27.6719L15.9141 33.6875C16.4609 34.0156 17.0078 34.125 17.6094 34.125C18.2109 34.125 18.8125 33.9609 19.3594 33.6328L29.6953 27.2891C30.7344 26.6328 31.3359 25.5391 31.2812 24.3359C31.2266 23.2969 30.625 22.2031 29.5312 21.6562ZM5.63281 10.1172C5.63281 9.57031 5.90625 9.13281 6.34375 8.85938L16.8438 2.78906C17.0625 2.67969 17.3359 2.57031 17.5547 2.57031C17.7734 2.57031 18.0469 2.625 18.2656 2.73437L28.5469 8.47656C28.9844 8.75 29.2578 9.1875 29.3125 9.73438C29.3125 10.2812 29.0391 10.7188 28.6016 10.9922L18.3203 17.3906C17.8828 17.6641 17.2812 17.6641 16.8438 17.3906L6.39844 11.375C5.90625 11.1562 5.63281 10.6641 5.63281 10.1172ZM5.63281 17.9375C5.63281 17.3906 5.90625 16.9531 6.34375 16.6797L9.02344 15.1484L15.8594 19.0859C16.4062 19.4141 16.9531 19.5234 17.5547 19.5234C18.1562 19.5234 18.7578 19.3594 19.3047 19.0312L26.0312 14.875L28.6016 16.2969C29.0391 16.5703 29.3125 17.0078 29.3672 17.5547C29.3672 18.1016 29.0938 18.5391 28.6563 18.8125L18.3203 25.2656C17.8828 25.5391 17.2812 25.5391 16.8438 25.2656L6.39844 19.25C5.90625 18.9766 5.63281 18.4844 5.63281 17.9375ZM28.6563 25.8125L18.3203 32.2109C17.8828 32.4844 17.2812 32.4844 16.8438 32.2109L6.39844 26.1953C5.96094 25.9219 5.6875 25.4844 5.6875 24.9375C5.6875 24.3906 5.96094 23.9531 6.39844 23.6797L8.3125 22.5859L15.8594 26.9609C16.4062 27.2891 16.9531 27.3984 17.5547 27.3984C18.1562 27.3984 18.7578 27.2344 19.3047 26.9062L26.7969 22.2578L28.6563 23.2969C29.0938 23.5703 29.3672 24.0078 29.4219 24.5547C29.3672 25.0469 29.0938 25.5391 28.6563 25.8125Z" fill="white" />
+                            </svg>
+                        </div>
+                        <h4 class="mb-3 text-xl font-bold text-dark">
+                            Rekam Medis Elektronik (EMR)
+                        </h4>
+                        <p class="mb-8 text-body-color lg:mb-11">
+                            Menyimpan semua rekam medis secara digital dengan sistem yang aman dan sesuai standar nasional. Fitur ini memungkinkan akses cepat ke riwayat kesehatan pasien, sehingga dokter dapat memberikan diagnosis dan tindakan lebih cepat dan akurat.
                         </p>
                         <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
