--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="relative flex items-center justify-between -mx-4">
                 <div class="max-w-full px-4 w-60">
                     <a href="index.html" class="block w-full py-5 navbar-logo">
+                        <!-- <img src="assets/images/logo/logo_simrs_reksamedic.svg" alt="logo" class="w-full header-logo"> -->
                         <img src="assets/images/logo/logo-white.svg" alt="logo" class="w-full header-logo" />
                     </a>
                 </div>
