--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- ====== Navbar Section End -->
 
     <!-- ====== Hero Section Start -->
-    <div class="relative pt-[100px] md:pt-[90px] lg:pt-[100px] bg-primary h-screen">
+    <div id="home" class="relative pt-[100px] md:pt-[90px] lg:pt-[100px] bg-primary h-screen">
         <div class="container h-full">
             <div class="flex flex-wrap items-center h-full -mx-4">
                 <div class="w-full px-4">
@@ -368,7 +368,7 @@
 
             <div class="flex flex-wrap -mx-4">
                 <!-- Fitur 1 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".1s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
@@ -392,7 +392,7 @@
                 </div>
 
                 <!-- Fitur 2 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".15s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
@@ -413,7 +413,7 @@
                 </div>
 
                 <!-- Fitur 3 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".2s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
@@ -437,7 +437,7 @@
                 </div>
 
                 <!-- Fitur 4 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
@@ -458,7 +458,7 @@
                 </div>
 
                 <!-- Fitur 5 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
@@ -479,7 +479,7 @@
                 </div>
 
                 <!-- Fitur 6 -->
-                <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
