menghapus kata "semua" pada fitur ke 6

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                             Rekam Medis Elektronik (EMR)
                         </h4>
                         <p class="mb-8 text-body-color lg:mb-11">
-                            Menyimpan semua rekam medis secara digital dengan sistem yang aman dan sesuai standar nasional. Fitur ini memungkinkan akses cepat ke riwayat kesehatan pasien, sehingga dokter dapat memberikan diagnosis dan tindakan lebih cepat dan akurat.
+                            Menyimpan rekam medis secara digital dengan sistem yang aman dan sesuai standar nasional. Fitur ini memungkinkan akses cepat ke riwayat kesehatan pasien, sehingga dokter dapat memberikan diagnosis dan tindakan lebih cepat dan akurat.
                         </p>
                         <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
