menghapus learn more pada fitur

--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
                             tersimpan secara akurat dan mudah diakses oleh staf medis dengan
                             keamanan data yang terjamin.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -410,9 +410,9 @@
                         <p class="mb-8 text-body-color lg:mb-11">
                             Mengelola billing dan pembayaran rumah sakit secara otomatis dengan sistem yang terintegrasi. Dari asuransi hingga pembayaran langsung pasien, sistem ini membantu memastikan setiap transaksi berjalan lancar.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -431,9 +431,9 @@
                         <p class="mb-8 text-body-color lg:mb-11">
                             Dapatkan laporan mendetail tentang kinerja rumah sakit kapan saja. Dengan fitur dashboard yang interaktif, Anda dapat memantau statistik pasien, keuangan,dan operasional secara real-time untuk pengambilan keputusan yang lebih baik.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -452,9 +452,9 @@
                         <p class="mb-8 text-body-color lg:mb-11">
                             Kontrol penuh terhadap stok obat dan alat medis. SIMRS Reksamedic membantu Anda memastikan bahwa kebutuhan medis di rumah sakit selalu terjaga dengan baik, menghindari kekurangan stok yang dapat menghambat layanan kepada pasien.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -473,9 +473,9 @@
                         <p class="mb-8 text-body-color lg:mb-11">
                             Kelola proses rawat inap dan rawat jalan secara efisien dengan modul yang didesain khusus untuk mempermudah alur kerja tenaga medis. Sistem ini memastikan pasien mendapatkan pelayanan yang cepat dan tepat tanpa kendala.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
 
@@ -494,9 +494,9 @@
                         <p class="mb-8 text-body-color lg:mb-11">
                             Menyimpan rekam medis secara digital dengan sistem yang aman dan sesuai standar nasional. Fitur ini memungkinkan akses cepat ke riwayat kesehatan pasien, sehingga dokter dapat memberikan diagnosis dan tindakan lebih cepat dan akurat.
                         </p>
-                        <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
+                        <!-- <a href="javascript:void(0)" class="text-base font-medium text-body-color hover:text-primary">
                             Learn More
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
