edit hero section pada tombol selengkapnya, memberikan efek tebal pada about di beberapa kata

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a href="signin.html" class="py-3 text-base font-medium text-white hover:opacity-70 px-7 loginBtn">
                             Sign In
                         </a>
-                        <a href="signup.html" class="px-6 py-3 text-base font-medium text-white duration-300 ease-in-out bg-white rounded-lg bg-opacity-20 hover:bg-opacity-100 hover:text-dark signUpBtn">
+                        <a href="signup.html" class="px-6 py-3 text-base font-medium text-white duration-300 ease-in-out bg-white rounded-lg bg-opacity-20 hover:bg-opacity-100 hover:text-primary signUpBtn">
                             Sign Up
                         </a>
                     </div>
@@ -112,18 +112,18 @@
 
     <!-- ====== Hero Section Start -->
     <div id="home" class="relative pt-[100px] md:pt-[90px] lg:pt-[100px] bg-primary h-screen">
-        <div class="container">
-            <div class="flex flex-wrap items-center -mx-4 bg-slate-400">
-                <div class="w-full px-4 bg-red-300">
-                    <div class="mx-auto text-center hero-content max-w-7xl wow fadeInUp" data-wow-delay=".2s">
+        <div class="container h-full">
+            <div class="flex flex-wrap items-center h-[120%] -mx-4">
+                <div class="w-full px-4">
+                    <div class="text-center hero-content max-w-7xl wow fadeInUp" data-wow-delay=".2s">
                         <h1 class="text-white font-extrabold text-3xl sm:text-4xl md:text-[45px] leading-snug sm:leading-snug md:leading-snug">
                             <!-- Open-Source Web Template for SaaS, Startup, Apps, and More -->
                             SIMRS Reksamedic : Solusi Digital Terbaik untuk Manajemen Rumah
                             Sakit Anda
                         </h1>
-                        <!-- <p class="text-[#f8f8f8] mt-10 font-semibold text-2xl mb-5 sm:text-3xl md:text-[30px] leading-tight sm:leading-tight md:leading-tight">
+                        <p class="text-[#f8f8f8] mt-4 font-semibold sm:text-3xl md:text-[28px] leading-tight sm:leading-tight md:leading-tight">
                             Kenapa Pilih SIMRS Reksamedic?
-                        </p> -->
+                        </p>
                         <!-- <div class="max-w-md mx-auto">
                             <p class="transition-all duration-300 text-base sm:text-lg sm:leading-relaxed md:text-xl md:leading-relaxed mx-auto mb-5 text-[#e4e4e4] max-w-[940px]">
                                 Manajemen rumah sakit yang efisien dan terintegrasi adalah kunci untuk memberikan pelayanan kesehatan terbaik kepada pasien.
@@ -132,7 +132,8 @@
                                 </span>
                             </p>
                         </div> -->
-                        <button class="p-2.5 mt-2 mb-10 text-xl font-bold text-gray-200 hover:font-extrabold hover:text-primary hover:bg-white"><a href="#about">Kenapa Pilih SIMRS Reksamedic?</a></button>
+                        <!-- <button class="px-6 py-3 mt-2 mb-10 text-xl font-semibold duration-300 ease-in-out bg-white rounded-lg text-primary hover:font-semibold hover:text-white "><a href="#about">Selengkapnya</a></button> -->
+                        <button class="px-6 py-3 mt-4 text-xl font-semibold text-white duration-300 ease-in-out bg-white rounded-lg bg-opacity-20 hover:bg-opacity-100 hover:text-primary"><a href="#about">Selengkapnya</a></button>
                         <!-- <button id="toggle-btn" class="mt-2 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none">Learn More</button>
                         <button id="hide-btn" class="hidden mt-4 mb-10 text-gray-200 hover:font-bold hover:text-white focus:outline-none">Hide</button> -->
                     </div>
@@ -166,12 +167,12 @@
                     ease-in-out
                   " />
             </div> -->
+                <!-- <div class="mt-16">
+                <img src="assets/images/hero/hero-image.jpg" alt="hero" class="max-w-full mx-auto rounded-t-xl rounded-tr-xl" />
+            </div> -->
 
-                <div class="self-end w-full px-4">
+                <div class="w-full px-4">
                     <div class="mx-auto max-w-[845px] relative z-10 wow fadeInUp" data-wow-delay=".25s">
-                        <!-- <div class="mt-16">
-                            <img src="assets/images/hero/hero-image.jpg" alt="hero" class="max-w-full mx-auto rounded-t-xl rounded-tr-xl" />
-                        </div> -->
                         <div class="absolute z-[-1] bottom-0 -left-9">
                             <svg width="134" height="106" viewBox="0 0 134 106" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="1.66667" cy="104" r="1.66667" transform="rotate(-90 1.66667 104)" fill="white" />
@@ -440,7 +441,7 @@
 
                 <!-- Fitur 4 -->
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-                    <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
+                    <div class="bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#ffffff" viewBox="0 0 256 256">
@@ -461,7 +462,7 @@
 
                 <!-- Fitur 5 -->
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-                    <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
+                    <div class="bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#ffffff" viewBox="0 0 256 256">
@@ -482,7 +483,7 @@
 
                 <!-- Fitur 6 -->
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-                    <div class="mb-12 bg-white group wow fadeInUp" data-wow-delay=".25s">
+                    <div class="bg-white group wow fadeInUp" data-wow-delay=".25s">
                         <div class="w-[70px] h-[70px] flex items-center justify-center bg-primary rounded-2xl mb-8 relative z-10">
                             <span class="w-[70px] h-[70px] flex items-center justify-center bg-primary bg-opacity-20 rounded-2xl mb-8 absolute z-[-1] top-0 left-0 rotate-[25deg] group-hover:rotate-45 duration-300"></span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#ffffff" viewBox="0 0 256 256">
@@ -506,7 +507,7 @@
     <!-- ====== Features Section End -->
 
     <!-- ====== About Section Start -->
-    <section id="about" class="pt-20 h-screen lg:pt-[120px] pb-20 lg:pb-[120px] bg-[#f3f4fe]">
+    <section id="about" class="pt-20 lg:pt-[120px] pb-20 lg:pb-[120px] bg-[#f3f4fe]">
         <div class="container">
             <div class="bg-white wow fadeInUp" data-wow-delay=".2s">
                 <div class="flex flex-wrap -mx-4">
@@ -516,14 +517,14 @@
                                 <span class="inline-block px-5 py-2 mb-5 text-sm font-medium text-white bg-primary">
                                     About Us
                                 </span>
-                                <h2 class="font-bold text-3xl sm:text-4xl 2xl:text-[40px] sm:leading-snug text-dark mb-6">
+                                <!-- <h2 class="font-bold text-3xl sm:text-4xl 2xl:text-[40px] sm:leading-snug text-dark mb-6">
                                     Brilliant Toolkit to Build Nextgen Website Faster.
-                                </h2>
+                                </h2> -->
                                 <p class="mb-5 text-base leading-relaxed text-justify text-body-color">
-                                    Manajemen rumah sakit yang efisien dan terintegrasi adalah kunci untuk memberikan pelayanan kesehatan terbaik kepada pasien. SIMRS Reksamedic hadir sebagai solusi Sistem Informasi Manajemen Rumah Sakit (SIMRS) yang modern, lengkap, dan mudah digunakan, dirancang khusus untuk membantu rumah sakit meningkatkan pelayanan, memaksimalkan efisiensi, dan mengelola operasional dengan lebih baik.
+                                    Manajemen rumah sakit yang efisien dan terintegrasi adalah kunci untuk memberikan pelayanan kesehatan terbaik kepada pasien. <strong>SIMRS Reksamedic</strong> hadir sebagai solusi <strong>Sistem Informasi Manajemen Rumah Sakit (SIMRS)</strong> yang modern, lengkap, dan mudah digunakan, dirancang khusus untuk membantu rumah sakit meningkatkan pelayanan, memaksimalkan efisiensi, dan mengelola operasional dengan lebih baik.
                                 </p>
                                 <p class="text-base leading-relaxed text-justify text-body-color mb-9">
-                                    Dengan SIMRS Reksamedic, Anda akan mendapatkan sistem yang tidak hanya mempermudah pengelolaan, tetapi juga meningkatkan performa keseluruhan rumah sakit. Mulai dari pendaftaran pasien, manajemen rawat inap, hingga laporan keuangan – semua bisa dilakukan hanya dalam satu platform. Tertarik? Simak lebih lanjut untuk mengetahui keunggulan dari SIMRS Reksamedic!
+                                    Dengan SIMRS Reksamedic, Anda akan mendapatkan sistem yang tidak hanya mempermudah pengelolaan, tetapi juga meningkatkan performa keseluruhan rumah sakit. Mulai dari pendaftaran pasien, manajemen rawat inap, hingga laporan keuangan – semua bisa dilakukan hanya dalam satu platform. <strong>Tertarik? Simak lebih lanjut untuk mengetahui keunggulan dari SIMRS Reksamedic!</strong>
                                 </p>
                                 <!-- <a href="javascript:void(0)" class="inline-flex items-center justify-center px-6 py-4 text-base font-medium text-white transition duration-300 ease-in-out rounded bg-primary hover:bg-opacity-90 hover:shadow-lg">
                                     Learn More
