--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             </div>
                             <div class="text-center">
                                 <div class="relative z-10 inline-block">
-                                    <img src="assets/images/about/about-image.svg" alt="image" class="mx-auto lg:ml-auto" />
+                                    <img src="assets/images/about/dashboard.png" alt="image" class="mx-auto lg:ml-auto" />
                                 </div>
                             </div>
                         </div>
