menambahkan jawaban dari pertanyaan yang sering di ajukan pada faq-section

--- a/index.html
+++ b/index.html
@@ -726,10 +726,7 @@
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                Ya, SIMRS Reksamedic dirancang modular dan fleksibel. Kami bisa menyesuaikan fitur-fitur sesuai dengan kebutuhan spesifik rumah sakit Anda.
                             </p>
                         </div>
                     </div>
@@ -749,10 +746,7 @@
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                Tentu saja! SIMRS Reksamedic sudah terintegrasi dengan sistem BPJS, sehingga mempermudah proses klaim dan administrasi.
                             </p>
                         </div>
                     </div>
@@ -772,10 +766,7 @@
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                Proses implementasi tergantung dari proses import data dari tiap rumah sakit, biasanya memakan waktu sekitar 4-8 minggu, tergantung pada kompleksitas data pada rumah sakit Anda.
                             </p>
                         </div>
                     </div>
@@ -791,16 +782,13 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    4. Apakah ada pelatihan untuk staf setelah implementasi?
+                                    4. Apakah ada pelatihan khusus untuk staf setelah implementasi?
                                 </h4>
                             </div>
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                Ya, kami menyediakan pelatihan lengkap untuk seluruh staf rumah sakit agar mereka dapat menggunakan sistem dengan optimal.
                             </p>
                         </div>
                     </div>
@@ -814,16 +802,13 @@
                             </div>
                             <div class="w-full">
                                 <h4 class="text-base font-semibold text-black sm:text-lg">
-                                    5. Bagaimana dengan keamanan data pasien?
+                                    5. Bagaimana dengan prosedur terkait keamanan data pasien?
                                 </h4>
                             </div>
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                SIMRS Reksamedic menggunakan standar keamanan data tingkat tinggi, termasuk enkripsi dan backup otomatis untuk melindungi semua data pasien dan operasional rumah sakit.
                             </p>
                         </div>
                     </div>
@@ -844,10 +829,7 @@
                         </button>
                         <div class="faq-content pl-[62px] hidden">
                             <p class="py-3 text-base leading-relaxed text-body-color">
-                                It takes 2-3 weeks to get your first blog post ready. That
-                                includes the in-depth research & creation of your monthly
-                                content marketing strategy that we do before writing your
-                                first blog post, Ipsum available .
+                                Anda bisa menghubungi tim support kami kapan saja melalui email, telepon, atau sistem tiket yang tersedia 24/7.
                             </p>
                         </div>
                     </div>
