merubah logo pada footer

--- a/index.html
+++ b/index.html
@@ -1652,11 +1652,10 @@
                 <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-4/12 xl:w-3/12">
                     <div class="w-full mb-10">
                         <a href="javascript:void(0)" class="inline-block max-w-[160px] mb-6">
-                            <img src="assets/images/logo/logo-white.svg" alt="logo" class="max-w-full" />
+                            <img src="assets/images/logo/logo_simrs_reksamedic.svg" alt="logo" class="max-w-full" />
                         </a>
                         <p class="text-base text-[#f3f4fe] mb-7">
-                            We create digital experiences for brands and companies by using
-                            technology.
+                            Jangan biarkan sistem manual menghambat pelayanan dan operasional rumah sakit Anda. <strong>SIMRS Reksamedic</strong> siap membantu Anda bertransformasi menuju manajemen rumah sakit yang lebih efisien, akurat, dan modern. Hubungi kami sekarang untuk mendapatkan <strong>penawaran khusus</strong> dan sesi <strong>demo gratis.</strong>
                         </p>
                         <div class="flex items-center -mx-3">
                             <a href="javascript:void(0)" class="px-3 text-[#dddddd] hover:text-white">
