--- a/index.html
+++ b/index.html
@@ -1437,8 +1437,7 @@
 
             <div class="flex flex-wrap items-center justify-center">
                 <div class="w-full md:w-1/2 lg:w-1/3">
-                    <div class="relative z-10 px-8 py-10 mb-10 overflow-hidden text-center bg-white border rounded-xl border-primary border-opacity-20 shadow-pricing sm:p-12 lg:py-10 lg:px-6 xl:p-12 wow fadeInUp" data-wow-delay=".15s
-                  ">
+                    <div class="relative z-10 px-8 py-10 mb-2.5 overflow-hidden text-center bg-white border rounded-xl border-primary border-opacity-20 shadow-pricing sm:p-12 lg:py-10 lg:px-6 xl:p-12 wow fadeInUp" data-wow-delay=".15s">
                         <span class="block mb-2 text-base font-medium uppercase text-dark">
                             STARTING FROM
                         </span>
@@ -1476,8 +1475,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-1/2 lg:w-1/3">
-                    <div class="bg-primary bg-gradient-to-b from-primary to-[#179BEE] rounded-xl relative z-10 overflow-hidden shadow-pricing py-10 px-8 sm:p-12 lg:py-10 lg:px-6 xl:p-12 mb-10 text-center wow fadeInUp" data-wow-delay=".1s
-                  ">
+                    <div class="bg-primary bg-gradient-to-b from-primary to-[#179BEE] rounded-xl relative z-10 overflow-hidden shadow-pricing py-10 px-8 sm:p-12 lg:py-10 lg:px-6 xl:p-12 mb-2.5 text-center wow fadeInUp" data-wow-delay=".1s">
                         <span class="inline-block px-6 py-2 mb-5 text-base font-semibold uppercase bg-white border border-white rounded-full text-primary">
                             POPULAR
                         </span>
@@ -1516,7 +1514,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-1/2 lg:w-1/3">
-                    <div class="relative z-10 px-8 py-10 mb-10 overflow-hidden text-center bg-white border rounded-xl border-primary border-opacity-20 shadow-pricing sm:p-12 lg:py-10 lg:px-6 xl:p-12 wow fadeInUp" data-wow-delay=".15s
+                    <div class="relative z-10 px-8 py-10 mb-2.5 overflow-hidden text-center bg-white border rounded-xl border-primary border-opacity-20 shadow-pricing sm:p-12 lg:py-10 lg:px-6 xl:p-12 wow fadeInUp" data-wow-delay=".15s
                   ">
                         <span class="block mb-2 text-base font-medium uppercase text-dark">
                             STARTING FROM
@@ -1568,14 +1566,20 @@
             <div class="flex flex-wrap items-center -mx-4">
                 <div class="w-full px-4 lg:w-7/12 xl:w-8/12">
                     <div class="ud-contact-content-wrapper">
-                        <div class="ud-contact-title mb-12 lg:mb-[150px]">
+                        <div class="ud-contact-title mb-12 lg:mb-[130px]">
                             <span class="mb-5 text-base font-semibold text-dark">
                                 CONTACT US
                             </span>
-                            <h2 class="text-[35px] font-semibold">
+                            <!-- <h2 class="text-[35px] font-semibold">
                                 Let's talk about <br />
                                 Love to hear from you!
+                            </h2> -->
+                            <h2 class="text-4xl font-semibold ">
+                                Mulai Sekarang, <br />
+                                Tingkatkan Efisiensi Rumah Sakit Anda <br />
+                                dengan SIMRS Reksamedic !
                             </h2>
+                            <p class="mt-5 text-justify">Jangan biarkan sistem manual menghambat pelayanan dan operasional rumah sakit Anda. <strong>SIMRS Reksamedic</strong> siap membantu Anda bertransformasi menuju manajemen rumah sakit yang lebih efisien, akurat, dan modern. Hubungi kami sekarang untuk mendapatkan <strong>penawaran khusus</strong> dan sesi <strong>demo gratis</strong>.</p>
                         </div>
                         <div class="flex flex-wrap justify-between mb-12 lg:mb-0">
                             <div class="flex max-w-full w-[330px] mb-8">
@@ -1588,7 +1592,7 @@
                                 <div>
                                     <h5 class="mb-6 text-lg font-semibold">Our Location</h5>
                                     <p class="text-base text-body-color">
-                                        401 Broadway, 24th Floor, Orchard Cloud View, London
+                                        Komplek Patal Senayan 71 No. 15, Parung, Bogor
                                     </p>
                                 </div>
                             </div>
@@ -1600,10 +1604,10 @@
                                 </div>
                                 <div>
                                     <h5 class="mb-6 text-lg font-semibold">How Can We Help?</h5>
-                                    <p class="text-base text-body-color">info@yourdomain.com</p>
-                                    <p class="text-base text-body-color">
+                                    <p class="text-base text-body-color">Pangeransamberproject@gmail.com</p>
+                                    <!-- <p class="text-base text-body-color">
                                         contact@yourdomain.com
-                                    </p>
+                                    </p> -->
                                 </div>
                             </div>
                         </div>
@@ -1655,7 +1659,8 @@
                             <img src="assets/images/logo/logo_simrs_reksamedic.svg" alt="logo" class="max-w-full" />
                         </a>
                         <p class="text-base text-[#f3f4fe] mb-7">
-                            Jangan biarkan sistem manual menghambat pelayanan dan operasional rumah sakit Anda. <strong>SIMRS Reksamedic</strong> siap membantu Anda bertransformasi menuju manajemen rumah sakit yang lebih efisien, akurat, dan modern. Hubungi kami sekarang untuk mendapatkan <strong>penawaran khusus</strong> dan sesi <strong>demo gratis.</strong>
+                            We create digital experiences for brands and companies by using
+                            technology.
                         </p>
                         <div class="flex items-center -mx-3">
                             <a href="javascript:void(0)" class="px-3 text-[#dddddd] hover:text-white">
